--- a/gggggg.html
+++ b/gggggg.html
@@ -48,8 +48,22 @@
       border-radius: 10px;
     }
 
-    .assignment-detail {
-      margin: 8px 0;
+    .assignment-box input[type="text"] {
+      background-color: #f1f5fa;
+      border: none;
+      border-bottom: 1px solid #ccc;
+      color: #003366;
+      padding: 5px;
+      margin-top: 5px;
+      margin-bottom: 10px;
+      width: 100%;
+      font-size: 16px;
+      font-weight: bold;
+    }
+
+    .assignment-box input[type="text"]:focus {
+      outline: none;
+      border-bottom: 2px solid #006dae;
     }
 
     .status-badge {
@@ -88,14 +102,6 @@
       color: white;
       border-bottom: 2px solid white;
       padding-bottom: 5px;
-    }
-
-    input[type="text"] {
-      padding: 5px;
-      margin-top: 5px;
-      margin-bottom: 10px;
-      width: 100%;
-      font-size: 16px;
     }
 
     .add-button {
